* Added a new ESQL query pragma:, NATIVE_FLOAT_TYPE, to avoid widening of floats to doubles (the current default behavior).
* Added a flag for ESQL's DataType's `widenSmallType`, to control to widening of floats

* Threaded QueryPragmas into any place in theh code which eventually calls `widenSmallType`, to allow conditioning the
  float widening on the session / query specific pragmas.

* For now, provided `QueryPragmas.EMPTY` as a hard coded argument for all the tests that now needs pragmas because
  of those changes. Ideally, next thing should be to inject pragmas into the tests from a single place, and using
  a Gradle command parameter. This will make sure that all the tests are running with the same pragmas values, and `
  avoid redyndant degrees of freedom where each test manually pass its own value.